# archivefs

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEDICATION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VISION.md  config.toml.example  install.sh
.github/workflows/: ci.yml  release.yml
crates/archivefs-cli/: Cargo.toml
crates/archivefs-cli/src/: main.rs  retroarch_cheat_cache.rs  retroarch_cheat_setup.rs  retroarch_cheat_sources.rs
crates/archivefs-core/: Cargo.toml
crates/archivefs-core/src/: database.rs  game_identity.rs  inspector.rs  lib.rs  library_views.rs
crates/archivefs-core/src/emulator_environment/: mod.rs  retroarch.rs
crates/archivefs-core/src/migrations/: 0001_initial.sql  0002_platform_aliases.sql  0003_source_folder_scan_status.sql  0004_scan_skip_counts.sql
crates/archivefs-core/src/patch_manager/: adapter.rs  cheat_cache_lock.rs  cheat_cache_maintenance.rs  cheat_catalogue.rs  cheat_history.rs  cheat_install_result.rs  cheat_installer.rs  cheat_rollback.rs  cheat_rollback_result.rs  cheat_sources.rs  destination_safety.rs  dolphin_local.rs  import_safety.rs  matching.rs  mod.rs  pcsx2.rs  pcsx2_local.rs  retrieval.rs  retroarch.rs  retroarch_cheat_library.rs  retroarch_cheat_setup.rs  retroarch_inventory.rs  retroarch_materialization.rs  shared_preview.rs  shared_transaction.rs
crates/archivefs-core/src/patch_manager/cheat_catalogue/: tests.rs
crates/archivefs-core/src/patch_manager/cheat_history/: tests.rs
crates/archivefs-core/src/patch_manager/cheat_install_result/: tests.rs
crates/archivefs-core/src/patch_manager/cheat_installer/: tests.rs
crates/archivefs-gui/: Cargo.toml
crates/archivefs-gui/src/: main.rs
crates/archivefs-gui/src/ui/: components.rs  layout.rs  mod.rs  theme.rs
docs/: ADAPTER_SUPPORT_MATRIX.md  CHEATS_MODS_SAFETY.md  CHEATS_MODS_USER_POLICY.md  DATABASE_DESIGN.md  DATABASE_RECOVERY.md  DOCKER_FUSE_RESEARCH.md  DOLPHIN_READONLY_ADAPTER.md  FABLE_CAMPAIGN_PLAN.md  FABLE_FEATURES.json  FABLE_PROGRESS.md  GUI_BACKEND_CAPABILITY_MATRIX.md  GUI_FINAL_POLISH_REPORT.md  GUI_SIMPLIFICATION.md  INTEGRATED_GUI_AUDIT.md  LIBRARY_SCAN_USABILITY.md  LOOSE_ROM_CHEAT_SUPPORT.md  MANUAL_QA_v0.5.0-alpha.md  MANUAL_QA_v0.6.0-alpha.md  PATCH_CHEAT_MANAGER_DESIGN.md  PCSX2_READONLY_ADAPTER.md  RELEASE_NOTES_v0.5.0-alpha.md  RELEASE_NOTES_v0.6.0-alpha.md  RETROARCH_APPIMAGE.md  RETROARCH_ARTIFACT_INVENTORY.md  RETROARCH_CHEAT_CACHE_LOCKING.md  RETROARCH_CHEAT_CACHE_MAINTENANCE.md  RETROARCH_CHEAT_CATALOGUE.md  RETROARCH_CHEAT_HISTORY.md  RETROARCH_CHEAT_INSTALL.md  RETROARCH_CHEAT_INSTALL_RESULT.md  RETROARCH_CHEAT_ROLLBACK.md  RETROARCH_CHEAT_SETUP.md  RETROARCH_CHEAT_SOURCES.md  RETROARCH_ENVIRONMENT.md  RETROARCH_GUI_APPLY_HISTORY.md  RETROARCH_PATCH_PREVIEW.md  RETROARCH_PLAYLISTS.md  RETROARCH_STREAMING_DOWNLOAD.md  SHARED_CHEAT_PREVIEW.md  SHARED_GAME_IDENTITY.md  (+14 more)
docs/adr/: 0001-persistent-library-database.md
scripts/: barry-checkpoint.sh  fable-preflight.sh  test-on-nobara.sh
tests/: test_barry_checkpoint.sh  test_install.sh
