[package]
name = "archivefs-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
# Library Views manifests (crates::library_views): a per-view JSON record
# of every managed symlink, read/written wholesale on every plan/apply -
# not hand-edited by users like config.toml, so a real structured format
# suits it better than another hand-rolled parser. Already an existing,
# well-established dependency of archivefs-cli.
serde_json = "1"
log = "0.4"
notify = "8"
sha2 = "0.11.0"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# Archive Inspector (read-only ZIP listing): a small, focused, well
# established crate rather than hand-parsed ZIP structure or shelling out
# to `unzip`/`7z`. Production code only ever lists entry metadata via
# `ZipArchive::by_index_raw` - it never decompresses anything - so no
# codec feature (deflate/bzip2/lzma/zstd/aes-crypto/...) is enabled here;
# see the `[dev-dependencies]` entry below for why tests need more.
zip = { version = "8.6", default-features = false }

[dev-dependencies]
# Same crate, fuller feature set: only test fixtures need to *write* zip
# files (including a deflated and a password-encrypted one) to exercise
# the read-only inspector against real archives. Cargo unifies features
# for one crate across `[dependencies]`/`[dev-dependencies]` only within
# a build that includes both (`cargo test`) - a plain `cargo build
# --release` (no test targets) never links any codec this crate does not
# itself need.
zip = { version = "8.6", features = ["deflate", "aes-crypto"] }
